fix(renderer): fix macos traffic lights gap - resolve #2035

--- a/src/plugins/in-app-menu/titlebar.css
+++ b/src/plugins/in-app-menu/titlebar.css
@@ -4,11 +4,13 @@
 }
 
 /* youtube-music style */
-
 ytmusic-app-layout {
   overflow: scroll;
   height: calc(100vh - var(--menu-bar-height, 36px));
   margin-top: var(--menu-bar-height, 36px) !important;
+}
+ytmusic-app-layout#layout {
+  --ytmusic-nav-bar-offset: 0px;
 }
 
 ytmusic-app-layout::-webkit-scrollbar{
